feat: finalize full app fixes and enhancements - Added retry & refresh token on 401/500 - Enabled location permission for check-in - Improved profile editing, phone validation & image change logic - Enhanced Tasks & Duty UI with shift/timestamp details - Fixed Leave date overlap & past-date validations - Unified snackbars for success/error/info messages - Updated Notes, FAQ, and Home tab issues - Integrated Leave & Notification APIs - Implemented Remember Me login logic - Added new Splash Screen and Week Off bug fix

--- a/android/app/src/main/res/drawable/launch_background.xml
+++ b/android/app/src/main/res/drawable/launch_background.xml
@@ -1,12 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Modify this file to customize your launch splash screen -->
+<!-- Native Launch Screen - Matches Flutter Splash Screen Design -->
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@android:color/white" />
+    <!-- Gradient Background (Brand Colors) -->
+    <item>
+        <shape android:shape="rectangle">
+            <gradient
+                android:type="linear"
+                android:angle="135"
+                android:startColor="#A7D222"
+                android:centerColor="#8DB71B"
+                android:endColor="#20B2AA" />
+        </shape>
+    </item>
 
-    <!-- You can insert your own image assets here -->
-    <!-- <item>
+    <!-- Logo Image (centered) -->
+    <item>
         <bitmap
             android:gravity="center"
-            android:src="@mipmap/launch_image" />
-    </item> -->
+            android:src="@drawable/splash_logo" />
+    </item>
 </layer-list>
